-- add support for creating a "plain dm-crypt" volume at a "none zero offset".This type of volume is useful as a
   "poor man's version of a hidden volume feature in TrueCrypt and VeraCrypt".Best thing about this type of hidden
   volume is that the outer volume can be anything including an "exposed file system".Currently,only zuluMount-gui can
   open this type of volume by clicking "options" followed by "Set Volume Offset" on the mounting dialog prompt.
-- Qt5 is now the default Qt dependency.

version 5.0.1
-- languages can be changed without requiring a restart.
-- add ability to use custom icons. Icons can be changed in zuluCrypt-gui through "menu->options->select icons" and in
   zuluMount-gui through "menu->select icons". User specific icons can be added by placing them at
   "$INSTALL_PREFIX/icons/hicolor/48x48/apps". zuluCrypt-gui icons must be in "zuluCrypt.ICON_NAME.png" format and
   zuluMount-gui icons must be in "zuluMount.ICON_NAME.png" format.
-- zuluMount-gui can now unlock cryfs,encfs,gocryptfs and securefs based encrypted volumes.
-- add full support for German translation.

version 5.0.2
-- add support for unlocking ecryptfs volumes in zuluMount-gui(ecryptfs-simple tool must already be installed)
-- fix permission related problems in configuration files when running in mixed mode.

version 5.0.3
-- make it possible to unlock folder based encrypted volumes when running in mixed mode.
-- add ability in zuluCrypt-gui to unlock VeraCrypt volumes that use PIM value.
-- add ability in zuluCrypt-gui to unlock plain dm-crypt volumes that uses an offset.
-- add ability in zuluCrypt-gui to create plain dm-crypt volumes using user configurable crypto options.
-- add ability in zuluCrypt-gui to unlock plain dm-crypt volumes using user configurable crypto options.
-- add ability in zuluCrypt-gui to backup and restore VeraCrypt headers.
-- add ability in zuluCrypt-gui to change VeraCrypt volume key.