@@ -266,3 +266,4 @@ version 5.0.3
 -- add ability in zuluCrypt-gui to unlock plain dm-crypt volumes using user configurable crypto options.
 -- add ability in zuluCrypt-gui to backup and restore VeraCrypt headers.
 -- add ability in zuluCrypt-gui to change VeraCrypt volume key.
+-- add ability in zuluCrypt-gui to create a VeraCrypt volume that uses a PIM value.
